# SubfolderSize

./: .README.md  .gitignore  README.md  build.bat  main.py  pyproject.toml
docs/: SubfolderTree Specs.md
